--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSV Files Display</title>
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.min.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
 </head>
 <body>
     <h1>CSV Files Display</h1>
@@ -56,6 +59,7 @@
             for (const file of csvFiles) {
                 const data = await loadCSV(file);
                 const table = await parseCSV(data);
+                table.classList.add('display');
 
                 const title = document.createElement('h2');
                 title.textContent = file;
@@ -64,6 +68,11 @@
                 container.appendChild(table);
                 container.appendChild(document.createElement('br'));
             }
+
+            // DataTableを適用
+            $(document).ready(function() {
+                $('table.display').DataTable();
+            });
         }
 
         displayCSVFiles();
