--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSV Files Display</title>
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/select/1.3.3/css/select.dataTables.min.css">
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/select/1.3.3/js/dataTables.select.min.js"></script>
 </head>
 <body>
     <h1>CSV Files Display</h1>
@@ -71,7 +73,19 @@
 
             // DataTableを適用
             $(document).ready(function() {
-                $('table.display').DataTable();
+                const table = $('table.display').DataTable();
+                $('table.display thead th').each(function (i) {
+                    const select = $('<select><option value=""></option></select>')
+                        .appendTo($(this).empty())
+                        .on('change', function () {
+                            const val = $.fn.dataTable.util.escapeRegex($(this).val());
+                            table.column(i).search(val ? '^' + val + '$' : '', true, false).draw();
+                        });
+
+                    table.column(i).data().unique().sort().each(function (d, j) {
+                        select.append('<option value="' + d + '">' + d + '</option>')
+                    });
+                });
             });
         }
 
