--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             border: 1px solid #ccc;
             padding: 10px;
             z-index: 1000;
+            max-height: 200px; /* 最大高さを設定 */
+            overflow-y: auto; /* 縦スクロールを有効にする */
         }
         .filter-group {
             display: block;
