--- a/index.html
+++ b/index.html
@@ -62,10 +62,13 @@
 
             // ヘッダー行を作成
             const headerRow = document.createElement('tr');
-            headers.forEach(header => {
+            headers.forEach((header, index) => {
                 const th = document.createElement('th');
                 th.textContent = header;
                 th.classList.add('filterable');
+                if (header === "町丁目名") {
+                    th.classList.remove('filterable');
+                }
                 headerRow.appendChild(th);
             });
             thead.appendChild(headerRow);
@@ -111,7 +114,7 @@
                 const table = $('table.display').DataTable({
                     // DataTableが初期化された後に実行
                     initComplete: function () {
-                        this.api().columns().every(function () {
+                        this.api().columns('.filterable').every(function () {
                             const column = this;
                             const columnName = $(column.header()).text();
                             const filterContainer = $('<div class="filter-container"></div>').hide();
