--- a/index.html
+++ b/index.html
@@ -20,19 +20,18 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
         }
-        .filter-header {
+        .filter-header, .filter-footer {
             position: sticky;
-            top: 0;
             background-color: white;
             padding: 5px 0;
             box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.2);
+            z-index: 10;
+        }
+        .filter-header {
+            top: 0;
         }
         .filter-footer {
-            position: sticky;
             bottom: 0;
-            background-color: white;
-            padding: 5px 0;
-            box-shadow: 0 -2px 2px -1px rgba(0, 0, 0, 0.2);
             text-align: right;
         }
         .filter-group {
@@ -46,7 +45,7 @@
         .filter-action-buttons {
             display: flex;
             justify-content: space-between;
-            margin-bottom: 10px;
+            padding: 0 10px;
         }
         .filter-checkbox {
             margin-right: 5px;
@@ -96,7 +95,7 @@
                 headerRow.appendChild(th);
             });
             thead.appendChild(headerRow);
-            table.appendChild(thead);
+            table.appendChild(tbody);
 
             // データ行を作成
             for (let i = 1; i < rows.length; i++) {
@@ -124,7 +123,7 @@
             for (const file of csvFiles) {
                 const data = await loadCSV(file);
                 const table = await parseCSV(data);
-                
+
                 const title = document.createElement('h2');
                 title.textContent = file;
 
