--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
         .filter-container label {
             display: flex;
             align-items: center;
+            white-space: nowrap; /* 改行を防ぐ */
+            margin-bottom: 5px;
+            padding: 5px;
+            border-bottom: 1px solid #eee;
         }
     </style>
     <!-- jQueryとDataTablesのJavaScriptを追加 -->
