--- a/index.html
+++ b/index.html
@@ -7,59 +7,8 @@
     <!-- DataTablesのスタイルシートを追加 -->
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.min.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/select/1.3.3/css/select.dataTables.min.css">
-    <style>
-        .filter-container {
-            display: none;
-            position: absolute;
-            background-color: white;
-            border: 1px solid #ccc;
-            max-height: 250px;
-            overflow-y: auto;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
-        }
-        .filter-header, .filter-footer {
-            position: sticky;
-            background-color: white;
-            padding: 10px;
-            z-index: 10;
-        }
-        .filter-header {
-            top: 0;
-            background-color: #f1f1f1;
-            border-bottom: 1px solid #ccc;
-        }
-        .filter-footer {
-            bottom: 0;
-            text-align: right;
-            background-color: #f1f1f1;
-            border-top: 1px solid #ccc;
-        }
-        .filter-group {
-            display: block;
-            margin-bottom: 10px;
-        }
-        .filter-button.active {
-            background-color: #007bff;
-            color: white;
-        }
-        .filter-action-buttons {
-            display: flex;
-            justify-content: space-between;
-        }
-        .filter-checkbox {
-            margin-right: 5px;
-        }
-        .filter-container label {
-            display: flex;
-            align-items: center;
-            white-space: nowrap; /* 改行を防ぐ */
-            margin-bottom: 5px;
-        }
-        .filter-checkbox {
-            margin-right: 5px; /* チェックボックスと項目名の間に余白を追加 */
-        }
-    </style>
+    <!-- 別のCSSファイルをリンク -->
+    <link rel="stylesheet" href="styles.css">
     <!-- jQueryとDataTablesのJavaScriptを追加 -->
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
