--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
                 const table = $('table.display').DataTable({
                     // DataTableが初期化された後に実行
                     initComplete: function () {
+                        const filterContainers = [];
+
                         this.api().columns('.filterable').every(function () {
                             const column = this;
                             const columnName = $(column.header()).text();
@@ -100,6 +102,8 @@
                             const filterContent = $('<div class="filter-content"></div>');
                             filterContainer.append(filterHeader).append(filterContent).append(filterFooter);
                             $('body').append(filterContainer);
+
+                            filterContainers.push(filterContainer);
 
                             // フィルターボタンを作成
                             const filterButton = $('<button class="filter-button">' + columnName + '</button>');
@@ -123,15 +127,23 @@
                                 filterContainer.hide();
                             });
 
+                            // チェックボックスを作成
                             uniqueData.each(function (d) {
                                 const checkbox = $('<input type="checkbox" class="filter-checkbox" data-column="' + column.index() + '">').val(d);
                                 const label = $('<label></label>').append(checkbox).append(d); // チェックボックスと項目名を一行に配置
-                            
+
                                 filterContent.append($('<div class="filter-group"></div>').append(label));
                             });
 
                             // フィルターボタンをクリックするとフィルターボックスを表示
                             $(filterButton).on('click', function (e) {
+                                // 他のフィルターボックスを閉じる
+                                filterContainers.forEach(function(container) {
+                                    if (container !== filterContainer) {
+                                        container.hide();
+                                    }
+                                });
+
                                 filterContainer.toggle().css({
                                     top: e.pageY,
                                     left: e.pageX
@@ -168,7 +180,9 @@
                             // フィルターボックス以外をクリックすると非表示
                             $(document).on('click', function (e) {
                                 if (!$(e.target).closest('.filter-container, .filter-button').length) {
-                                    $('.filter-container').hide(); // 他のフィルターボックスを含めすべて非表示
+                                    filterContainers.forEach(function(container) {
+                                        container.hide();
+                                    });
                                 }
                             });
                         });
