--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                             const column = this;
                             const columnName = $(column.header()).text();
                             const filterContainer = $('<div class="filter-container"></div>').hide();
-                            const filterHeader = $('<div class="filter-header"></div>');
+                            const filterHeader = $('<div class="filter-header">検索フィルター</div>');
                             const filterFooter = $('<div class="filter-footer"></div>');
                             const filterContent = $('<div class="filter-content"></div>');
                             filterContainer.append(filterHeader).append(filterContent).append(filterFooter);
