--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 <body>
     <h1>CSV Files Display</h1>
+        <h2>検索フィルター</h2>
     <div id="filter-buttons"></div>
     <div id="tables"></div>
 
@@ -97,7 +98,7 @@
                             const column = this;
                             const columnName = $(column.header()).text();
                             const filterContainer = $('<div class="filter-container"></div>').hide();
-                            const filterHeader = $('<div class="filter-header">検索フィルター</div>');
+                            const filterHeader = $('<div class="filter-header"></div>');
                             const filterFooter = $('<div class="filter-footer"></div>');
                             const filterContent = $('<div class="filter-content"></div>');
                             filterContainer.append(filterHeader).append(filterContent).append(filterFooter);
