--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSV Files Display</title>
+    <title>東京23区 住所ごとの地震への強さ表</title>
     <!-- DataTablesのスタイルシートを追加 -->
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.min.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/select/1.3.3/css/select.dataTables.min.css">
@@ -15,9 +15,10 @@
     <script src="https://cdn.datatables.net/select/1.3.3/js/dataTables.select.min.js"></script>
 </head>
 <body>
-    <h1>CSV Files Display</h1>
+    <h1>東京23区 住所ごとの地震への強さ表</h1>
         <h2>検索フィルター</h2>
     <div id="filter-buttons"></div>
+        <h2>表</h2>
     <div id="tables"></div>
 
     <script>
