--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 </head>
 <body>
     <h1>東京23区 住所ごとの地震への強さ表</h1>
-    <hr>
-    <h3>検索フィルター</h3>
-    <div id="filter-buttons"></div>
-    <hr>
+    <div class="option_box1">
+        <h3>検索フィルター</h3>
+        <div id="filter-buttons"></div>
+    </div>
     <h3>表</h3>
     <div id="tables"></div>
 
