--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 const th = document.createElement('th');
                 th.textContent = header;
                 th.classList.add('filterable');
-                if (header === "町丁目名") {
+                if (header === "町丁目") {
                     th.classList.remove('filterable');
                 }
                 headerRow.appendChild(th);
