--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 </head>
 <body>
     <h1>東京23区 住所ごとの地震への強さ表</h1>
+    <ul>
+        <li>出典: <cite><a href="https://www.funenka.metro.tokyo.lg.jp/area-hazard-level/regional-risk-list/">東京都不燃化ポータルサイト 地域危険度一覧表</a></cite></li>
+        <li>数字が小さい（1に近い）ほど危険度が低く、数字が大きい（5に近い）ほど危険度が高いです。</li>
+    </ul>
     <div class="option_box1">
         <h3>検索フィルター</h3>
         <div id="filter-buttons"></div>
