--- a/index.html
+++ b/index.html
@@ -94,6 +94,25 @@
                 const table = $('table.display').DataTable({
                     // DataTableが初期化された後に実行
                     initComplete: function () {
+                        const tableColumns = this.api().columns();
+                        const columnsContainer = $('<div class="columns-container"></div>');
+                        $('body').prepend(columnsContainer);
+
+                        // 各列のチェックボックスを作成
+                        tableColumns.every(function (index) {
+                            const column = this;
+                            const columnName = $(column.header()).text();
+                            const checkbox = $('<input type="checkbox" class="column-checkbox" data-column="' + index + '">').val(columnName).prop('checked', true);
+                            const label = $('<label></label>').append(checkbox).append(columnName);
+                            columnsContainer.append($('<div class="column-group"></div>').append(label));
+                        
+                            // チェックボックスの状態によって列の表示/非表示を切り替える
+                            checkbox.on('change', function () {
+                                const colIdx = $(this).data('column');
+                                table.column(colIdx).visible($(this).prop('checked'));
+                            });
+                        });
+
                         const filterContainers = [];
 
                         this.api().columns('.filterable').every(function () {
